tests/errors/macro/parser_include_need_filename/only_include.c
#include

int main()
{
	return 0;
}
